--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "lint:fix": "eslint src/**/*.ts --fix",
     "typecheck": "tsc --noEmit",
     "clean": "rm -rf dist",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "prepare": "husky"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -34,8 +35,11 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "eslint": "^8.57.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.2.7",
     "ts-jest": "^29.1.2",
+    "tsc-files": "^1.1.4",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   },
@@ -54,5 +58,10 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/tu-usuario/manolito-zurrapa.git"
+  },
+  "lint-staged": {
+    "*.ts": [
+      "tsc-files --noEmit"
+    ]
   }
 }
