feat: migrate from Groq to multi-provider AI system (DeepSeek default)
- Replace groq-sdk with openai package for OpenAI-compatible API support
- Add multi-provider support: DeepSeek, Groq, OpenAI, OpenRouter
- Configurable via env vars: AI_PROVIDER, AI_API_KEY, AI_MODEL, AI_TEMPERATURE
- Add AI_PROVIDERS and AI_DEFAULTS constants for centralized config
- Add session token tracking with getTokenStats() method
- Update logs to show dynamic provider name
- Add temperature config (1.3 default for DeepSeek conversation)
- Add comprehensive AI service tests (27 new tests)
- Update README badges and documentation
- Add VOD chat download script (scripts/download-vod-chat.py)
- Fix lint-staged to only check src files

--- a/.env.example
+++ b/.env.example
@@ -16,9 +16,16 @@ TWITCH_REFRESH_TOKEN=
 TWITCH_CHANNEL=tu_canal
 TWITCH_BOT_USERNAME=tu_bot
 
-# --- Groq AI (LLM) ---
-# Obtener en https://console.groq.com/
-GROQ_API_KEY=tu_groq_api_key
+# --- AI Provider (LLM) ---
+# Proveedores soportados: deepseek, groq, openai, openrouter
+# DeepSeek: https://platform.deepseek.com/
+# Groq: https://console.groq.com/
+# OpenAI: https://platform.openai.com/
+# OpenRouter: https://openrouter.ai/
+AI_PROVIDER=deepseek
+AI_API_KEY=tu_api_key
+# AI_MODEL=deepseek-chat  # Opcional: override del modelo por defecto
+# AI_TEMPERATURE=1.3      # DeepSeek: 1.3 conversación, 1.5 creativo
 
 # --- Brave Search (opcional) ---
 # Obtener en https://brave.com/search/api/
